Color change for active state in side menu (mobile), fixes #58 —> After discussing this change with Joost, we decided to only use a different bg color for the active state, as all menus are already collapsed in mobile menu. Also informed Mijke about this. Changed padding for .submenu and .submenu .submenu links

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -972,9 +972,27 @@ textarea {
               weight:normal;
             }
           }
-        }
-      }
-    }
+          ul {
+           li {
+             a {
+               padding: {
+                 left: 25px;
+               }
+             }
+             ul {
+               li {
+                 a {
+                   padding: {
+                     left:30px;
+                   }
+                 }
+               }
+             }
+           }
+         }
+       }
+     }
+   }
   }
   form {
     margin: 15px;
